src/rematch/parsing/grammar/REmatchParser.java
// Generated from REmatchParser.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class REmatchParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DECIMAL_DIGIT=1, NOT_DECIMAL_DIGIT=2, WHITESPACE=3, NOT_WHITESPACE=4, 
		ALPHANUMERIC=5, NOT_ALPHANUMERIC=6, TAB=7, CARRIAGE_RETURN=8, NEWLINE=9, 
		VERTICAL_WHITESPACE=10, FORM_FEED=11, PIPE=12, EXCLAMAITON=13, L_CURLY=14, 
		R_CURLY=15, L_PAR=16, R_PAR=17, COMMA=18, QUESTION=19, PLUS=20, STAR=21, 
		HAT=22, HYPHEN=23, L_BRACK=24, R_BRACK=25, BACKSLASH=26, ALPHA=27, DIGIT=28, 
		DOT=29, DOLLAR=30, UNRECOGNIZED=31;
	public static final int
		RULE_root = 0, RULE_alternation = 1, RULE_expr = 2, RULE_element = 3, 
		RULE_group = 4, RULE_parentheses = 5, RULE_assignation = 6, RULE_leftAssignation = 7, 
		RULE_rigthAssignation = 8, RULE_varname = 9, RULE_atom = 10, RULE_characterClass = 11, 
		RULE_ccAtom = 12, RULE_ccRange = 13, RULE_ccSingle = 14, RULE_ccLiteral = 15, 
		RULE_ccEscapes = 16, RULE_ccOther = 17, RULE_ccSpecial = 18, RULE_singleSharedAtom = 19, 
		RULE_literal = 20, RULE_escapes = 21, RULE_special = 22, RULE_other = 23, 
		RULE_sharedAtom = 24, RULE_quantifier = 25, RULE_quantity = 26, RULE_quantExact = 27, 
		RULE_quantRange = 28, RULE_quantMin = 29, RULE_quantMax = 30, RULE_number = 31, 
		RULE_anchor = 32, RULE_anchorStart = 33, RULE_anchorEnd = 34;
	private static String[] makeRuleNames() {
		return new String[] {
			"root", "alternation", "expr", "element", "group", "parentheses", "assignation", 
			"leftAssignation", "rigthAssignation", "varname", "atom", "characterClass", 
			"ccAtom", "ccRange", "ccSingle", "ccLiteral", "ccEscapes", "ccOther", 
			"ccSpecial", "singleSharedAtom", "literal", "escapes", "special", "other", 
			"sharedAtom", "quantifier", "quantity", "quantExact", "quantRange", "quantMin", 
			"quantMax", "number", "anchor", "anchorStart", "anchorEnd"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'\\d'", "'\\D'", "'\\s'", "'\\S'", "'\\w'", "'\\W'", "'\\t'", 
			"'\\r'", "'\\n'", "'\\v'", "'\\f'", "'|'", "'!'", "'{'", "'}'", "'('", 
			"')'", "','", "'?'", "'+'", "'*'", "'^'", "'-'", "'['", "']'", "'\\'", 
			null, null, "'.'", "'$'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DECIMAL_DIGIT", "NOT_DECIMAL_DIGIT", "WHITESPACE", "NOT_WHITESPACE", 
			"ALPHANUMERIC", "NOT_ALPHANUMERIC", "TAB", "CARRIAGE_RETURN", "NEWLINE", 
			"VERTICAL_WHITESPACE", "FORM_FEED", "PIPE", "EXCLAMAITON", "L_CURLY", 
			"R_CURLY", "L_PAR", "R_PAR", "COMMA", "QUESTION", "PLUS", "STAR", "HAT", 
			"HYPHEN", "L_BRACK", "R_BRACK", "BACKSLASH", "ALPHA", "DIGIT", "DOT", 
			"DOLLAR", "UNRECOGNIZED"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "REmatchParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public REmatchParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RootContext extends ParserRuleContext {
		public AlternationContext alternation() {
			return getRuleContext(AlternationContext.class,0);
		}
		public TerminalNode EOF() { return getToken(REmatchParser.EOF, 0); }
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof REmatchParserListener ) ((REmatchParserListener)listener).enterRoot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof REmatchParserListener ) ((REmatchParserListener)listener).exitRoot(this);
		}
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_root);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			alternation();
			setState(71);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AlternationContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> PIPE() { return getTokens(REmatchParser.PIPE); }
		public TerminalNode PIPE(int i) {
			return getToken(REmatchParser.PIPE, i);
		}
		public AlternationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alternation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof REmatchParserListener ) ((REmatchParserListener)listener).enterAlternation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof REmatchParserListener ) ((REmatchParserListener)listener).exitAlternation(this);
		}
	}

	public final AlternationContext alternation() throws RecognitionException {
		AlternationContext _localctx = new AlternationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_alternation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			expr();
			setState(78);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PIPE) {
				{
				{
				setState(74);
				match(PIPE);
				setState(75);
				expr();
				}
				}
				setState(80);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprContext extends ParserRuleContext {
		public List<ElementContext> element() {
			return getRuleContexts(ElementContext.class);
		}
		public ElementContext element(int i) {
			return getRuleContext(ElementContext.class,i);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof REmatchParserListener ) ((REmatchParserListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof REmatchParserListener ) ((REmatchParserListener)listener).exitExpr(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_expr);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(82); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(81);
					element();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(84); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ElementContext extends ParserRuleContext {
		public GroupContext group() {
			return getRuleContext(GroupContext.class,0);
		}
		public QuantifierContext quantifier() {
			return getRuleContext(QuantifierContext.class,0);
		}
		public ElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_element; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof REmatchParserListener ) ((REmatchParserListener)listener).enterElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof REmatchParserListener ) ((REmatchParserListener)listener).exitElement(this);
		}
	}

	public final ElementContext element() throws RecognitionException {
		ElementContext _localctx = new ElementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_element);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			group();
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 3686400L) != 0)) {
				{
				setState(87);
				quantifier();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GroupContext extends ParserRuleContext {
		public ParenthesesContext parentheses() {
			return getRuleContext(ParenthesesContext.class,0);
		}
		public AssignationContext assignation() {
			return getRuleContext(AssignationContext.class,0);
		}
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public GroupContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_group; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof REmatchParserListener ) ((REmatchParserListener)listener).enterGroup(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof REmatchParserListener ) ((REmatchParserListener)listener).exitGroup(this);
		}
	}

	public final GroupContext group() throws RecognitionException {
		GroupContext _localctx = new GroupContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_group);
		try {
			setState(93);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(90);
				parentheses();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(91);
				assignation();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(92);
				atom();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParenthesesContext extends ParserRuleContext {
		public TerminalNode L_PAR() { return getToken(REmatchParser.L_PAR, 0); }
		public AlternationContext alternation() {
			return getRuleContext(AlternationContext.class,0);
		}
		public TerminalNode R_PAR() { return getToken(REmatchParser.R_PAR, 0); }
		public ParenthesesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parentheses; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof REmatchParserListener ) ((REmatchParserListener)listener).enterParentheses(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof REmatchParserListener ) ((REmatchParserListener)listener).exitParentheses(this);
		}
	}

	public final ParenthesesContext parentheses() throws RecognitionException {
		ParenthesesContext _localctx = new ParenthesesContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_parentheses);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(L_PAR);
			setState(96);
			alternation();
			setState(97);
			match(R_PAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignationContext extends ParserRuleContext {
		public TerminalNode EXCLAMAITON() { return getToken(REmatchParser.EXCLAMAITON, 0); }
		public VarnameContext varname() {
			return getRuleContext(VarnameContext.class,0);
		}
		public TerminalNode L_CURLY() { return getToken(REmatchParser.L_CURLY, 0); }
		public AlternationContext alternation() {
			return getRuleContext(AlternationContext.class,0);
		}
		public TerminalNode R_CURLY() { return getToken(REmatchParser.R_CURLY, 0); }
		public AssignationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof REmatchParserListener ) ((REmatchParserListener)listener).enterAssignation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof REmatchParserListener ) ((REmatchParserListener)listener).exitAssignation(this);
		}
	}

	public final AssignationContext assignation() throws RecognitionException {
		AssignationContext _localctx = new AssignationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_assignation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(EXCLAMAITON);
			setState(100);
			varname();
			setState(101);
			match(L_CURLY);
			setState(102);
			alternation();
			setState(103);
			match(R_CURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LeftAssignationContext extends ParserRuleContext {
		public List<TerminalNode> EXCLAMAITON() { return getTokens(REmatchParser.EXCLAMAITON); }
		public TerminalNode EXCLAMAITON(int i) {
			return getToken(REmatchParser.EXCLAMAITON, i);
		}
		public VarnameContext varname() {
			return getRuleContext(VarnameContext.class,0);
		}
		public TerminalNode L_CURLY() { return getToken(REmatchParser.L_CURLY, 0); }
		public LeftAssignationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_leftAssignation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof REmatchParserListener ) ((REmatchParserListener)listener).enterLeftAssignation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof REmatchParserListener ) ((REmatchParserListener)listener).exitLeftAssignation(this);
		}
	}

	public final LeftAssignationContext leftAssignation() throws RecognitionException {
		LeftAssignationContext _localctx = new LeftAssignationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_leftAssignation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(EXCLAMAITON);
			setState(106);
			match(EXCLAMAITON);
			setState(107);
			varname();
			setState(108);
			match(L_CURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RigthAssignationContext extends ParserRuleContext {
		public TerminalNode R_CURLY() { return getToken(REmatchParser.R_CURLY, 0); }
		public VarnameContext varname() {
			return getRuleContext(VarnameContext.class,0);
		}
		public List<TerminalNode> EXCLAMAITON() { return getTokens(REmatchParser.EXCLAMAITON); }
		public TerminalNode EXCLAMAITON(int i) {
			return getToken(REmatchParser.EXCLAMAITON, i);
		}
		public RigthAssignationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rigthAssignation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof REmatchParserListener ) ((REmatchParserListener)listener).enterRigthAssignation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof REmatchParserListener ) ((REmatchParserListener)listener).exitRigthAssignation(this);
		}
	}

	public final RigthAssignationContext rigthAssignation() throws RecognitionException {
		RigthAssignationContext _localctx = new RigthAssignationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_rigthAssignation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(R_CURLY);
			setState(111);
			varname();
			setState(112);
			match(EXCLAMAITON);
			setState(113);
			match(EXCLAMAITON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarnameContext extends ParserRuleContext {
		public List<TerminalNode> ALPHA() { return getTokens(REmatchParser.ALPHA); }
		public TerminalNode ALPHA(int i) {
			return getToken(REmatchParser.ALPHA, i);
		}
		public List<TerminalNode> DIGIT() { return getTokens(REmatchParser.DIGIT); }
		public TerminalNode DIGIT(int i) {
			return getToken(REmatchParser.DIGIT, i);
		}
		public VarnameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varname; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof REmatchParserListener ) ((REmatchParserListener)listener).enterVarname(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof REmatchParserListener ) ((REmatchParserListener)listener).exitVarname(this);
		}
	}

	public final VarnameContext varname() throws RecognitionException {
		VarnameContext _localctx = new VarnameContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_varname);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(ALPHA);
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ALPHA || _la==DIGIT) {
				{
				{
				setState(116);
				_la = _input.LA(1);
				if ( !(_la==ALPHA || _la==DIGIT) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AtomContext extends ParserRuleContext {
		public LeftAssignationContext leftAssignation() {
			return getRuleContext(LeftAssignationContext.class,0);
		}
		public RigthAssignationContext rigthAssignation() {
			return getRuleContext(RigthAssignationContext.class,0);
		}
		public CharacterClassContext characterClass() {
			return getRuleContext(CharacterClassContext.class,0);
		}
		public SingleSharedAtomContext singleSharedAtom() {
			return getRuleContext(SingleSharedAtomContext.class,0);
		}
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public AnchorContext anchor() {
			return getRuleContext(AnchorContext.class,0);
		}
		public AtomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atom; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof REmatchParserListener ) ((REmatchParserListener)listener).enterAtom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof REmatchParserListener ) ((REmatchParserListener)listener).exitAtom(this);
		}
	}

	public final AtomContext atom() throws RecognitionException {
		AtomContext _localctx = new AtomContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_atom);
		try {
			setState(128);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(122);
				leftAssignation();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(123);
				rigthAssignation();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(124);
				characterClass();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(125);
				singleSharedAtom();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(126);
				literal();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(127);
				anchor();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CharacterClassContext extends ParserRuleContext {
		public TerminalNode L_BRACK() { return getToken(REmatchParser.L_BRACK, 0); }
		public TerminalNode R_BRACK() { return getToken(REmatchParser.R_BRACK, 0); }
		public TerminalNode HAT() { return getToken(REmatchParser.HAT, 0); }
		public List<CcAtomContext> ccAtom() {
			return getRuleContexts(CcAtomContext.class);
		}
		public CcAtomContext ccAtom(int i) {
			return getRuleContext(CcAtomContext.class,i);
		}
		public CharacterClassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_characterClass; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof REmatchParserListener ) ((REmatchParserListener)listener).enterCharacterClass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof REmatchParserListener ) ((REmatchParserListener)listener).exitCharacterClass(this);
		}
	}

	public final CharacterClassContext characterClass() throws RecognitionException {
		CharacterClassContext _localctx = new CharacterClassContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_characterClass);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(L_BRACK);
			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==HAT) {
				{
				setState(131);
				match(HAT);
				}
			}

			setState(135); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(134);
				ccAtom();
				}
				}
				setState(137); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 4248829950L) != 0) );
			setState(139);
			match(R_BRACK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CcAtomContext extends ParserRuleContext {
		public CcRangeContext ccRange() {
			return getRuleContext(CcRangeContext.class,0);
		}
		public SharedAtomContext sharedAtom() {
			return getRuleContext(SharedAtomContext.class,0);
		}
		public CcSingleContext ccSingle() {
			return getRuleContext(CcSingleContext.class,0);
		}
		public CcAtomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ccAtom; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof REmatchParserListener ) ((REmatchParserListener)listener).enterCcAtom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof REmatchParserListener ) ((REmatchParserListener)listener).exitCcAtom(this);
		}
	}

	public final CcAtomContext ccAtom() throws RecognitionException {
		CcAtomContext _localctx = new CcAtomContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_ccAtom);
		try {
			setState(144);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(141);
				ccRange();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(142);
				sharedAtom();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(143);
				ccSingle();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CcRangeContext extends ParserRuleContext {
		public List<CcLiteralContext> ccLiteral() {
			return getRuleContexts(CcLiteralContext.class);
		}
		public CcLiteralContext ccLiteral(int i) {
			return getRuleContext(CcLiteralContext.class,i);
		}
		public TerminalNode HYPHEN() { return getToken(REmatchParser.HYPHEN, 0); }
		public CcRangeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ccRange; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof REmatchParserListener ) ((REmatchParserListener)listener).enterCcRange(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof REmatchParserListener ) ((REmatchParserListener)listener).exitCcRange(this);
		}
	}

	public final CcRangeContext ccRange() throws RecognitionException {
		CcRangeContext _localctx = new CcRangeContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_ccRange);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			ccLiteral();
			setState(147);
			match(HYPHEN);
			setState(148);
			ccLiteral();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CcSingleContext extends ParserRuleContext {
		public CcLiteralContext ccLiteral() {
			return getRuleContext(CcLiteralContext.class,0);
		}
		public CcSingleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ccSingle; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof REmatchParserListener ) ((REmatchParserListener)listener).enterCcSingle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof REmatchParserListener ) ((REmatchParserListener)listener).exitCcSingle(this);
		}
	}

	public final CcSingleContext ccSingle() throws RecognitionException {
		CcSingleContext _localctx = new CcSingleContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_ccSingle);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			ccLiteral();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
